Call newInstance on Constructor object.
This resolves a deprecation warning.